created a page with a catalog

--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,435 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Catalog</title>
+    <link rel="stylesheet" href="src/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- Шапка начало -->
+    <div class="nav__container">
+      <button class="header__burger-btn" id="burger-btn">
+        <span></span><span></span><span></span>
+      </button>
+      <!-- <div class="header__title-box_for-media"> -->
+      <div class="nav__title">
+        <a href="/index.html"
+          ><img src="/public/images/MAROON.svg" alt="Логотип"
+        /></a>
+      </div>
+
+      <div class="box">
+        <div class="header__nav">
+          <ul class="header__list">
+            <li><a class="header__link" href="/catalog.html">Каталог</a></li>
+            <li><a class="header__link" href="#">О нас</a></li>
+            <li><a class="header__link" href="#">Контакты</a></li>
+          </ul>
+        </div>
+        <div class="profile-icons__wrapper">
+          <a href="#" data-bs-toggle="modal" data-bs-target="#signUpModal"
+            ><img
+              class="social-media__icon"
+              src="/public/images/man.svg"
+              alt="Мой профиль"
+          /></a>
+
+          <a href="#"
+            ><img
+              class="social-media__icon"
+              src="/public/images/bag.svg"
+              alt="Корзина"
+          /></a>
+        </div>
+        <!-- </div> -->
+      </div>
+    </div>
+    <!-- Шапка конец -->
+    <!-- Линия под шапкой начало -->
+    <div class="nav_border-bottom"></div>
+    <!-- Линия под шапкой конец -->
+
+    <!-- Каталог начало -->
+    <section class="cards">
+      <div class="cards__header">
+        <div class="cards__title">Каталог</div>
+        <!-- <div class="cards__filter"> -->
+        <button class="cards__filter-btn">Фильтр</button>
+        <!-- </div> -->
+      </div>
+      <div class="container container__cards">
+        <!-- Начало карточки -->
+        <div class="card">
+          <div class="card__top">
+            <a class="card__img" href="#"
+              ><img src="/public/images/Rectangle43.png" alt="cream"
+            /></a>
+          </div>
+          <div class="card__bottom">
+            <div class="card__inform">
+              <div class="card__title-wrapper">
+                <div class="card__titlee">High</div>
+                <div class="card__subtitlee">крем для лица</div>
+              </div>
+              <div class="card__price-wrapper">
+                <div class="card__price">990</div>
+                <div class="card__volume">50ml</div>
+              </div>
+            </div>
+
+            <button class="card__btn">В корзину</button>
+          </div>
+        </div>
+        <!-- Конец карточки -->
+
+        <!-- Начало карточки -->
+        <div class="card">
+          <div class="card__top">
+            <a class="card__img" href="#"
+              ><img src="/public/images/Rectangle44.png" alt="cream"
+            /></a>
+          </div>
+          <div class="card__bottom">
+            <div class="card__inform">
+              <div class="card__title-wrapper">
+                <div class="card__titlee">High</div>
+                <div class="card__subtitlee">крем для лица</div>
+              </div>
+              <div class="card__price-wrapper">
+                <div class="card__price">990</div>
+                <div class="card__volume">50ml</div>
+              </div>
+            </div>
+            <button class="card__btn">В корзину</button>
+          </div>
+        </div>
+
+        <!-- Конец карточки -->
+        <!-- Начало карточки -->
+        <div class="card">
+          <div class="card__top">
+            <a class="card__img" href="#"
+              ><img src="/public/images/Rectangle45.png" alt="cream"
+            /></a>
+          </div>
+          <div class="card__bottom">
+            <div class="card__inform">
+              <div class="card__title-wrapper">
+                <div class="card__titlee">High</div>
+                <div class="card__subtitlee">крем для лица</div>
+              </div>
+              <div class="card__price-wrapper">
+                <div class="card__price">990</div>
+                <div class="card__volume">50ml</div>
+              </div>
+            </div>
+
+            <button class="card__btn">В корзину</button>
+          </div>
+        </div>
+        <!-- Конец карточки -->
+        <!-- Начало карточки -->
+        <div class="card">
+          <div class="card__top">
+            <a class="card__img" href="#"
+              ><img src="/public/images/Rectangle46.png" alt="cream"
+            /></a>
+          </div>
+          <div class="card__bottom">
+            <div class="card__inform">
+              <div class="card__title-wrapper">
+                <div class="card__titlee">High</div>
+                <div class="card__subtitlee">крем для лица</div>
+              </div>
+              <div class="card__price-wrapper">
+                <div class="card__price">990</div>
+                <div class="card__volume">50ml</div>
+              </div>
+            </div>
+
+            <button class="card__btn">В корзину</button>
+          </div>
+        </div>
+        <!-- Конец карточки -->
+        <!-- Начало карточки -->
+        <div class="card">
+          <div class="card__top">
+            <a class="card__img" href="#"
+              ><img src="/public/images/Rectangle47.png" alt="cream"
+            /></a>
+          </div>
+          <div class="card__bottom">
+            <div class="card__inform">
+              <div class="card__title-wrapper">
+                <div class="card__titlee">High</div>
+                <div class="card__subtitlee">крем для лица</div>
+              </div>
+              <div class="card__price-wrapper">
+                <div class="card__price">990</div>
+                <div class="card__volume">50ml</div>
+              </div>
+            </div>
+
+            <button class="card__btn">В корзину</button>
+          </div>
+        </div>
+        <!-- Конец карточки -->
+        <div class="card">
+          <div class="card__top">
+            <a class="card__img" href="#"
+              ><img src="/public/images/rec48.png" alt="cream"
+            /></a>
+          </div>
+          <div class="card__bottom">
+            <div class="card__inform">
+              <div class="card__title-wrapper">
+                <div class="card__titlee">High</div>
+                <div class="card__subtitlee">крем для лица</div>
+              </div>
+              <div class="card__price-wrapper">
+                <div class="card__price">990</div>
+                <div class="card__volume">50ml</div>
+              </div>
+            </div>
+
+            <button class="card__btn">В корзину</button>
+          </div>
+        </div>
+        <!-- Конец карточки -->
+        <div class="card">
+          <div class="card__top">
+            <a class="card__img" href="#"
+              ><img src="/public/images/Rectangle49.png" alt="cream"
+            /></a>
+          </div>
+          <div class="card__bottom">
+            <div class="card__inform">
+              <div class="card__title-wrapper">
+                <div class="card__titlee">High</div>
+                <div class="card__subtitlee">крем для лица</div>
+              </div>
+              <div class="card__price-wrapper">
+                <div class="card__price">990</div>
+                <div class="card__volume">50ml</div>
+              </div>
+            </div>
+
+            <button class="card__btn">В корзину</button>
+          </div>
+        </div>
+        <!-- Конец карточки -->
+        <div class="card">
+          <div class="card__top">
+            <a class="card__img" href="#"
+              ><img src="/public/images/Rectangle50.png" alt="cream"
+            /></a>
+          </div>
+          <div class="card__bottom">
+            <div class="card__inform">
+              <div class="card__title-wrapper">
+                <div class="card__titlee">High</div>
+                <div class="card__subtitlee">крем для лица</div>
+              </div>
+              <div class="card__price-wrapper">
+                <div class="card__price">990</div>
+                <div class="card__volume">50ml</div>
+              </div>
+            </div>
+
+            <button class="card__btn">В корзину</button>
+          </div>
+        </div>
+        <!-- Конец карточки -->
+        <div class="card">
+          <div class="card__top">
+            <a class="card__img" href="#"
+              ><img src="/public/images/Rectangle51.png" alt="cream"
+            /></a>
+          </div>
+          <div class="card__bottom">
+            <div class="card__inform">
+              <div class="card__title-wrapper">
+                <div class="card__titlee">High</div>
+                <div class="card__subtitlee">крем для лица</div>
+              </div>
+              <div class="card__price-wrapper">
+                <div class="card__price">990</div>
+                <div class="card__volume">50ml</div>
+              </div>
+            </div>
+
+            <button class="card__btn">В корзину</button>
+          </div>
+        </div>
+        <!-- Конец карточки -->
+        <div class="card">
+          <div class="card__top">
+            <a class="card__img" href="#"
+              ><img src="/public/images/Rectangle52.png" alt="cream"
+            /></a>
+          </div>
+          <div class="card__bottom">
+            <div class="card__inform">
+              <div class="card__title-wrapper">
+                <div class="card__titlee">High</div>
+                <div class="card__subtitlee">крем для лица</div>
+              </div>
+              <div class="card__price-wrapper">
+                <div class="card__price">990</div>
+                <div class="card__volume">50ml</div>
+              </div>
+            </div>
+
+            <button class="card__btn">В корзину</button>
+          </div>
+        </div>
+        <!-- Конец карточки -->
+
+        <div class="card">
+          <div class="card__top">
+            <a class="card__img" href="#"
+              ><img src="/public/images/Rectangle53.png" alt="cream"
+            /></a>
+          </div>
+          <div class="card__bottom">
+            <div class="card__inform">
+              <div class="card__title-wrapper">
+                <div class="card__titlee">High</div>
+                <div class="card__subtitlee">крем для лица</div>
+              </div>
+              <div class="card__price-wrapper">
+                <div class="card__price">990</div>
+                <div class="card__volume">50ml</div>
+              </div>
+            </div>
+
+            <button class="card__btn">В корзину</button>
+          </div>
+        </div>
+        <!-- Конец карточки -->
+        <div class="card">
+          <div class="card__top">
+            <a class="card__img" href="#"
+              ><img src="/public/images/rec54.png" alt="cream"
+            /></a>
+          </div>
+          <div class="card__bottom">
+            <div class="card__inform">
+              <div class="card__title-wrapper">
+                <div class="card__titlee">High</div>
+                <div class="card__subtitlee">крем для лица</div>
+              </div>
+              <div class="card__price-wrapper">
+                <div class="card__price">990</div>
+                <div class="card__volume">50ml</div>
+              </div>
+            </div>
+            <button class="card__btn">В корзину</button>
+          </div>
+        </div>
+
+        <!-- Конец карточки -->
+      </div>
+      <div class="arrows-container">
+        <img
+          class="arrow"
+          id="catalog_prev"
+          src="/public/images/left.svg"
+          alt="стрелка налево"
+        />
+        <img
+          class="arrow"
+          id="catalog_next"
+          src="/public/images/right.svg"
+          alt="стрелка направо"
+        />
+      </div>
+    </section>
+    <!-- Каталог конец -->
+    <!--  Адрес начало-->
+
+    <section class="contacts">
+      <div class="contacts__description">
+        <div class="contacts__title">Контакты</div>
+        <div class="address__container">
+          <div class="address__title">Адрес</div>
+          <div class="address__text">
+            Санкт-Петербург, ул. Большая Конюшенная, 19
+          </div>
+        </div>
+        <div class="phone__container">
+          <div class="telephone__title">Телефон</div>
+          <div class="telephone__number">+7 (923) 888-90-60</div>
+        </div>
+        <div class="email__container">
+          <div class="email__title">E-mail</div>
+          <div class="email__address">info@maroon.ru</div>
+        </div>
+
+        <div class="social-media__container">
+          <img
+            class="social-media__icon"
+            src="/public/images/fb.svg"
+            alt="фэйсбук"
+          />
+          <img
+            class="social-media__icon"
+            src="/public/images/ingm.svg"
+            alt="иконка инстаграма"
+          />
+          <img
+            class="social-media__icon"
+            src="/public/images/twtr.svg"
+            alt="иконка твиттер"
+          />
+        </div>
+      </div>
+
+      <div id="map" class="map__container"></div>
+    </section>
+    <!-- Footer начало -->
+    <footer class="footer">
+      <div class="footer__line">
+        <div class="footer__container">
+          <div class="footer-nav__container">
+            <div class="footer-nav__title">
+              <a href="#"
+                ><img src="/public/images/MAROON.svg" alt="Логотип" />
+              </a>
+            </div>
+            <ul class="footer_list">
+              <li><a class="footer-a" href="#">Каталог</a></li>
+              <li><a class="footer-a" href="#">О нас</a></li>
+              <li><a class="footer-a" href="#">Магазины</a></li>
+              <li><a class="footer-a" href="#">Контакты</a></li>
+            </ul>
+          </div>
+          <div class="social-media">
+            <img
+              class="social-media__icon"
+              src="/public/images/fb.svg"
+              alt="фэйсбук"
+            />
+            <img
+              class="social-media__icon"
+              src="/public/images/ingm.svg"
+              alt="иконка инстаграма"
+            />
+            <img
+              class="social-media__icon"
+              src="/public/images/twtr.svg"
+              alt="иконка твиттер"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="inform-container">
+        <div class="company">Maroon &copy 2020 Все права защищены</div>
+        <a href="#" class="politic_conf">Политика конфиденциальности</a>
+      </div>
+    </footer>
+    <!-- Footer конец -->
+
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=53af7210-735a-4eb7-9c7b-d1e8805991bc&lang=ru_RU"></script>
+    <script src="/src/js/main.js"></script>
+  </body>
 </html>
