--- a/index.html
+++ b/index.html
@@ -155,13 +155,15 @@
         </button>
         <!-- <div class="header__title-box_for-media"> -->
         <div class="nav__title">
-          <a href="#"><img src="/public/images/MAROON.svg" alt="Логотип" /></a>
+          <a href="/index.html"
+            ><img src="/public/images/MAROON.svg" alt="Логотип"
+          /></a>
         </div>
 
         <div class="box">
           <div class="header__nav">
             <ul class="header__list">
-              <li><a class="header__link" href="#">Каталог</a></li>
+              <li><a class="header__link" href="/catalog.html">Каталог</a></li>
               <li><a class="header__link" href="#">О нас</a></li>
               <li><a class="header__link" href="#">Контакты</a></li>
             </ul>
@@ -459,7 +461,7 @@
               </a>
             </div>
             <ul class="footer_list">
-              <li><a class="footer-a" href="#">Каталог</a></li>
+              <li><a class="footer-a" href="/catalog.html">Каталог</a></li>
               <li><a class="footer-a" href="#">О нас</a></li>
               <li><a class="footer-a" href="#">Магазины</a></li>
               <li><a class="footer-a" href="#">Контакты</a></li>
@@ -489,7 +491,7 @@
         <a href="#" class="politic_conf">Политика конфиденциальности</a>
       </div>
     </footer>
-    <!--  -->
+    <!-- Скрипты -->
     <script
       src="https://kit.fontawesome.com/104ba3ab13.js"
       crossorigin="anonymous"
