created page with basket

--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Catalog</title>
+    <title>Каталог</title>
     <link rel="stylesheet" href="src/css/style.css" />
   </head>
   <body>
@@ -35,7 +35,7 @@
               alt="Мой профиль"
           /></a>
 
-          <a href="#"
+          <a href="/basket.html"
             ><img
               class="social-media__icon"
               src="/public/images/bag.svg"
