--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 alt="Мой профиль"
             /></a>
 
-            <a href="#"
+            <a href="/basket.html"
               ><img
                 class="social-media__icon"
                 src="/public/images/bag.svg"
