--- a/basket.html
+++ b/basket.html
@@ -40,7 +40,9 @@
               class="social-media__icon"
               src="/public/images/bag.svg"
               alt="Корзина"
-          /></a>
+            />
+            <span class="basket__count">0</span></a
+          >
         </div>
         <!-- </div> -->
       </div>
