--- a/index.html
+++ b/index.html
@@ -181,7 +181,9 @@
                 class="social-media__icon"
                 src="/public/images/bag.svg"
                 alt="Корзина"
-            /></a>
+              />
+              <span class="basket__count">0</span></a
+            >
           </div>
           <!-- </div> -->
         </div>
@@ -507,6 +509,9 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://api-maps.yandex.ru/2.1/?apikey=53af7210-735a-4eb7-9c7b-d1e8805991bc&lang=ru_RU"></script>
-    <script src="/src/js/main.js"></script>
+    <script src="/src/js/map.js"></script>
+    <script src="/src/js/burger.js"></script>
+    <script src="/src/js/validate.js"></script>
+    <script src="/src/js/index.js"></script>
   </body>
 </html>
