added function wich  check products quality

--- a/catalog.html
+++ b/catalog.html
@@ -62,7 +62,7 @@
       </div>
       <div class="container container__cards">
         <!-- Начало карточки -->
-        <div class="card">
+        <div class="card" id="1">
           <div class="card__top">
             <a class="card__img" href="#"
               ><img src="/public/images/Rectangle43.png" alt="cream"
@@ -86,7 +86,7 @@
         <!-- Конец карточки -->
 
         <!-- Начало карточки -->
-        <div class="card">
+        <div class="card" id="2">
           <div class="card__top">
             <a class="card__img" href="#"
               ><img src="/public/images/Rectangle44.png" alt="cream"
@@ -99,7 +99,7 @@
                 <div class="card__subtitlee">крем для лица</div>
               </div>
               <div class="card__price-wrapper">
-                <div class="card__price">990</div>
+                <div class="card__price">550</div>
                 <div class="card__volume">50ml</div>
               </div>
             </div>
@@ -109,7 +109,7 @@
 
         <!-- Конец карточки -->
         <!-- Начало карточки -->
-        <div class="card">
+        <div class="card" id="3">
           <div class="card__top">
             <a class="card__img" href="#"
               ><img src="/public/images/Rectangle45.png" alt="cream"
@@ -122,7 +122,7 @@
                 <div class="card__subtitlee">крем для лица</div>
               </div>
               <div class="card__price-wrapper">
-                <div class="card__price">990</div>
+                <div class="card__price">790</div>
                 <div class="card__volume">50ml</div>
               </div>
             </div>
@@ -132,7 +132,7 @@
         </div>
         <!-- Конец карточки -->
         <!-- Начало карточки -->
-        <div class="card">
+        <div class="card" id="4">
           <div class="card__top">
             <a class="card__img" href="#"
               ><img src="/public/images/Rectangle46.png" alt="cream"
@@ -145,7 +145,7 @@
                 <div class="card__subtitlee">крем для лица</div>
               </div>
               <div class="card__price-wrapper">
-                <div class="card__price">990</div>
+                <div class="card__price">890</div>
                 <div class="card__volume">50ml</div>
               </div>
             </div>
@@ -155,7 +155,7 @@
         </div>
         <!-- Конец карточки -->
         <!-- Начало карточки -->
-        <div class="card">
+        <div class="card" id="5">
           <div class="card__top">
             <a class="card__img" href="#"
               ><img src="/public/images/Rectangle47.png" alt="cream"
@@ -168,7 +168,7 @@
                 <div class="card__subtitlee">крем для лица</div>
               </div>
               <div class="card__price-wrapper">
-                <div class="card__price">990</div>
+                <div class="card__price">1990</div>
                 <div class="card__volume">50ml</div>
               </div>
             </div>
@@ -177,7 +177,7 @@
           </div>
         </div>
         <!-- Конец карточки -->
-        <div class="card">
+        <div class="card" id="6">
           <div class="card__top">
             <a class="card__img" href="#"
               ><img src="/public/images/rec48.png" alt="cream"
@@ -190,7 +190,7 @@
                 <div class="card__subtitlee">крем для лица</div>
               </div>
               <div class="card__price-wrapper">
-                <div class="card__price">990</div>
+                <div class="card__price">490</div>
                 <div class="card__volume">50ml</div>
               </div>
             </div>
@@ -199,7 +199,7 @@
           </div>
         </div>
         <!-- Конец карточки -->
-        <div class="card">
+        <div class="card" id="7">
           <div class="card__top">
             <a class="card__img" href="#"
               ><img src="/public/images/Rectangle49.png" alt="cream"
@@ -212,7 +212,7 @@
                 <div class="card__subtitlee">крем для лица</div>
               </div>
               <div class="card__price-wrapper">
-                <div class="card__price">990</div>
+                <div class="card__price">890</div>
                 <div class="card__volume">50ml</div>
               </div>
             </div>
@@ -221,7 +221,7 @@
           </div>
         </div>
         <!-- Конец карточки -->
-        <div class="card">
+        <div class="card" id="8">
           <div class="card__top">
             <a class="card__img" href="#"
               ><img src="/public/images/Rectangle50.png" alt="cream"
@@ -234,7 +234,7 @@
                 <div class="card__subtitlee">крем для лица</div>
               </div>
               <div class="card__price-wrapper">
-                <div class="card__price">990</div>
+                <div class="card__price">790</div>
                 <div class="card__volume">50ml</div>
               </div>
             </div>
@@ -243,7 +243,7 @@
           </div>
         </div>
         <!-- Конец карточки -->
-        <div class="card">
+        <div class="card" id="9">
           <div class="card__top">
             <a class="card__img" href="#"
               ><img src="/public/images/Rectangle51.png" alt="cream"
@@ -256,7 +256,7 @@
                 <div class="card__subtitlee">крем для лица</div>
               </div>
               <div class="card__price-wrapper">
-                <div class="card__price">990</div>
+                <div class="card__price">2990</div>
                 <div class="card__volume">50ml</div>
               </div>
             </div>
@@ -265,7 +265,7 @@
           </div>
         </div>
         <!-- Конец карточки -->
-        <div class="card">
+        <div class="card" id="10">
           <div class="card__top">
             <a class="card__img" href="#"
               ><img src="/public/images/Rectangle52.png" alt="cream"
@@ -278,7 +278,7 @@
                 <div class="card__subtitlee">крем для лица</div>
               </div>
               <div class="card__price-wrapper">
-                <div class="card__price">990</div>
+                <div class="card__price">3990</div>
                 <div class="card__volume">50ml</div>
               </div>
             </div>
@@ -288,7 +288,7 @@
         </div>
         <!-- Конец карточки -->
 
-        <div class="card">
+        <div class="card" id="11">
           <div class="card__top">
             <a class="card__img" href="#"
               ><img src="/public/images/Rectangle53.png" alt="cream"
@@ -301,7 +301,7 @@
                 <div class="card__subtitlee">крем для лица</div>
               </div>
               <div class="card__price-wrapper">
-                <div class="card__price">990</div>
+                <div class="card__price">590</div>
                 <div class="card__volume">50ml</div>
               </div>
             </div>
@@ -310,7 +310,7 @@
           </div>
         </div>
         <!-- Конец карточки -->
-        <div class="card">
+        <div class="card" id="12">
           <div class="card__top">
             <a class="card__img" href="#"
               ><img src="/public/images/rec54.png" alt="cream"
@@ -323,7 +323,7 @@
                 <div class="card__subtitlee">крем для лица</div>
               </div>
               <div class="card__price-wrapper">
-                <div class="card__price">990</div>
+                <div class="card__price">490</div>
                 <div class="card__volume">50ml</div>
               </div>
             </div>
@@ -434,6 +434,6 @@
     <!-- Footer конец -->
 
     <script src="https://api-maps.yandex.ru/2.1/?apikey=53af7210-735a-4eb7-9c7b-d1e8805991bc&lang=ru_RU"></script>
-    <script src="/src/js/main.js"></script>
+    <script src="/src/js/catalog.js"></script>
   </body>
 </html>
