--- a/basket.html
+++ b/basket.html
@@ -35,7 +35,7 @@
               alt="Мой профиль"
           /></a>
 
-          <a href="#"
+          <a class="cart" href="#"
             ><img
               class="social-media__icon"
               src="/public/images/bag.svg"
@@ -55,74 +55,11 @@
     <section class="basket">
       <div class="basket__container">
         <div class="basket__title">Корзина</div>
-        <div class="product__list">
-          <!-- <div class="basket__header">
-            <div class="product__list_header">Продукт</div>
-            <div class="product__list-quantity">Количество</div>
-            <div class="product__list_price">Цена</div>
-            <div></div>
-          </div> -->
-          <div class="product">
-            <div class="product__inform">
-              <!-- <div class="product__img"> -->
-              <a class="product__img" href="#"
-                ><img src="/public/images/Rectangle44.png" alt="product"
-              /></a>
-              <!-- </div> -->
-              <div class="product__title-wrapper">
-                <a href="#" class="product__title">Увлажняющий крем</a>
-                <div class="product__subtitle">Для сухой кожи</div>
-              </div>
-            </div>
-            <div class="product__quantity-wrapper">
-              <button class="product__remouve-btn">
-                <i class="fa-solid fa-minus fa-lg"></i>
-              </button>
-              <div class="product__quantity">1</div>
-              <button class="product__add-btn">
-                <i class="fa-solid fa-plus fa-lg"></i>
-              </button>
-            </div>
-            <div class="product__price">45</div>
-
-            <button class="product__delete-btn">
-              <i class="fa-solid fa-xmark fa-xl"></i>
-            </button>
-          </div>
-          <!--  -->
-          <div class="product">
-            <div class="product__inform">
-              <!-- <div class="product__img"> -->
-              <a class="product__img" href="#"
-                ><img src="/public/images/Rectangle45.png" alt="product"
-              /></a>
-              <!-- </div> -->
-              <div class="product__title-wrapper">
-                <a href="#" class="product__title">Увлажняющий крем</a>
-                <div class="product__subtitle">Для сухой кожи</div>
-              </div>
-            </div>
-            <div class="product__quantity-wrapper">
-              <button class="product__remouve-btn">
-                <i class="fa-solid fa-minus fa-lg"></i>
-              </button>
-              <div class="product__quantity">1</div>
-              <button class="product__add-btn">
-                <i class="fa-solid fa-plus fa-lg"></i>
-              </button>
-            </div>
-            <div class="product__price">45</div>
-
-            <button class="product__delete-btn">
-              <i class="fa-solid fa-xmark fa-xl"></i>
-            </button>
-          </div>
-          <!--  -->
-        </div>
+        <div class="product__list"></div>
         <div class="basket__footer">
           <a class="basket__link" href="#">Вернуться к покупкам</a>
           <div class="subtotal-wrapper">
-            <div class="subtotal">50</div>
+            <div class="subtotal"></div>
             <button class="order-btn">Заказать</button>
           </div>
         </div>
@@ -174,5 +111,6 @@
       src="https://kit.fontawesome.com/104ba3ab13.js"
       crossorigin="anonymous"
     ></script>
+    <script src="/src/js/basket.js"></script>
   </body>
 </html>
