fixed a bug with the shopping cart, added scrolling of the page when clicking on menu items

--- a/catalog.html
+++ b/catalog.html
@@ -23,8 +23,14 @@
         <div class="header__nav">
           <ul class="header__list">
             <li><a class="header__link" href="/catalog.html">Каталог</a></li>
-            <li><a class="header__link" href="#">О нас</a></li>
-            <li><a class="header__link" href="#">Контакты</a></li>
+            <li>
+              <a class="header__link" href="/index.html#our-history">О нас</a>
+            </li>
+            <li>
+              <a class="header__link" href="/index.html#our-contacts"
+                >Контакты</a
+              >
+            </li>
           </ul>
         </div>
         <div class="profile-icons__wrapper">
