--- a/index.html
+++ b/index.html
@@ -164,8 +164,14 @@
           <div class="header__nav">
             <ul class="header__list">
               <li><a class="header__link" href="/catalog.html">Каталог</a></li>
-              <li><a class="header__link" href="#">О нас</a></li>
-              <li><a class="header__link" href="#">Контакты</a></li>
+              <li>
+                <a class="header__link about_us" href="#our-history">О нас</a>
+              </li>
+              <li>
+                <a class="header__link contactss" href="#our-contacts"
+                  >Контакты</a
+                >
+              </li>
             </ul>
           </div>
           <div class="profile-icons__wrapper">
@@ -401,7 +407,7 @@
       </div>
     </section>
     <!--  -->
-    <section class="our-history">
+    <section class="our-history" id="our-history">
       <div class="history__text">
         <p>
           “Мы стремимся сделать уход за кожей доступным и приятным ритуалом для
@@ -412,7 +418,7 @@
     </section>
     <!--  -->
 
-    <section class="contacts">
+    <section class="contacts" id="our-contacts">
       <div class="contacts__description">
         <div class="contacts__title">Контакты</div>
         <div class="address__container">
