--- a/basket.html
+++ b/basket.html
@@ -111,6 +111,6 @@
       src="https://kit.fontawesome.com/104ba3ab13.js"
       crossorigin="anonymous"
     ></script>
-    <script src="/src/js/basket.js"></script>
+    <script src="/src/js/basket.js" type="module"></script>
   </body>
 </html>
