--- a/catalog.html
+++ b/catalog.html
@@ -68,7 +68,7 @@
       </div>
       <div class="container container__cards">
         <!-- Начало карточки -->
-        <div class="card" id="1">
+        <!-- <div class="card" id="1">
           <div class="card__top">
             <a class="card__img" href="#"
               ><img src="/public/images/Rectangle43.png" alt="cream"
@@ -89,269 +89,22 @@
             <button class="card__btn">В корзину</button>
           </div>
         </div>
-        <!-- Конец карточки -->
-
-        <!-- Начало карточки -->
-        <div class="card" id="2">
-          <div class="card__top">
-            <a class="card__img" href="#"
-              ><img src="/public/images/Rectangle44.png" alt="cream"
-            /></a>
-          </div>
-          <div class="card__bottom">
-            <div class="card__inform">
-              <div class="card__title-wrapper">
-                <div class="card__titlee">High</div>
-                <div class="card__subtitlee">крем для лица</div>
-              </div>
-              <div class="card__price-wrapper">
-                <div class="card__price">550</div>
-                <div class="card__volume">50ml</div>
-              </div>
-            </div>
-            <button class="card__btn">В корзину</button>
-          </div>
-        </div>
-
-        <!-- Конец карточки -->
-        <!-- Начало карточки -->
-        <div class="card" id="3">
-          <div class="card__top">
-            <a class="card__img" href="#"
-              ><img src="/public/images/Rectangle45.png" alt="cream"
-            /></a>
-          </div>
-          <div class="card__bottom">
-            <div class="card__inform">
-              <div class="card__title-wrapper">
-                <div class="card__titlee">High</div>
-                <div class="card__subtitlee">крем для лица</div>
-              </div>
-              <div class="card__price-wrapper">
-                <div class="card__price">790</div>
-                <div class="card__volume">50ml</div>
-              </div>
-            </div>
-
-            <button class="card__btn">В корзину</button>
-          </div>
-        </div>
-        <!-- Конец карточки -->
-        <!-- Начало карточки -->
-        <div class="card" id="4">
-          <div class="card__top">
-            <a class="card__img" href="#"
-              ><img src="/public/images/Rectangle46.png" alt="cream"
-            /></a>
-          </div>
-          <div class="card__bottom">
-            <div class="card__inform">
-              <div class="card__title-wrapper">
-                <div class="card__titlee">High</div>
-                <div class="card__subtitlee">крем для лица</div>
-              </div>
-              <div class="card__price-wrapper">
-                <div class="card__price">890</div>
-                <div class="card__volume">50ml</div>
-              </div>
-            </div>
-
-            <button class="card__btn">В корзину</button>
-          </div>
-        </div>
-        <!-- Конец карточки -->
-        <!-- Начало карточки -->
-        <div class="card" id="5">
-          <div class="card__top">
-            <a class="card__img" href="#"
-              ><img src="/public/images/Rectangle47.png" alt="cream"
-            /></a>
-          </div>
-          <div class="card__bottom">
-            <div class="card__inform">
-              <div class="card__title-wrapper">
-                <div class="card__titlee">High</div>
-                <div class="card__subtitlee">крем для лица</div>
-              </div>
-              <div class="card__price-wrapper">
-                <div class="card__price">1990</div>
-                <div class="card__volume">50ml</div>
-              </div>
-            </div>
-
-            <button class="card__btn">В корзину</button>
-          </div>
-        </div>
-        <!-- Конец карточки -->
-        <div class="card" id="6">
-          <div class="card__top">
-            <a class="card__img" href="#"
-              ><img src="/public/images/rec48.png" alt="cream"
-            /></a>
-          </div>
-          <div class="card__bottom">
-            <div class="card__inform">
-              <div class="card__title-wrapper">
-                <div class="card__titlee">High</div>
-                <div class="card__subtitlee">крем для лица</div>
-              </div>
-              <div class="card__price-wrapper">
-                <div class="card__price">490</div>
-                <div class="card__volume">50ml</div>
-              </div>
-            </div>
-
-            <button class="card__btn">В корзину</button>
-          </div>
-        </div>
-        <!-- Конец карточки -->
-        <div class="card" id="7">
-          <div class="card__top">
-            <a class="card__img" href="#"
-              ><img src="/public/images/Rectangle49.png" alt="cream"
-            /></a>
-          </div>
-          <div class="card__bottom">
-            <div class="card__inform">
-              <div class="card__title-wrapper">
-                <div class="card__titlee">High</div>
-                <div class="card__subtitlee">крем для лица</div>
-              </div>
-              <div class="card__price-wrapper">
-                <div class="card__price">890</div>
-                <div class="card__volume">50ml</div>
-              </div>
-            </div>
-
-            <button class="card__btn">В корзину</button>
-          </div>
-        </div>
-        <!-- Конец карточки -->
-        <div class="card" id="8">
-          <div class="card__top">
-            <a class="card__img" href="#"
-              ><img src="/public/images/Rectangle50.png" alt="cream"
-            /></a>
-          </div>
-          <div class="card__bottom">
-            <div class="card__inform">
-              <div class="card__title-wrapper">
-                <div class="card__titlee">High</div>
-                <div class="card__subtitlee">крем для лица</div>
-              </div>
-              <div class="card__price-wrapper">
-                <div class="card__price">790</div>
-                <div class="card__volume">50ml</div>
-              </div>
-            </div>
-
-            <button class="card__btn">В корзину</button>
-          </div>
-        </div>
-        <!-- Конец карточки -->
-        <div class="card" id="9">
-          <div class="card__top">
-            <a class="card__img" href="#"
-              ><img src="/public/images/Rectangle51.png" alt="cream"
-            /></a>
-          </div>
-          <div class="card__bottom">
-            <div class="card__inform">
-              <div class="card__title-wrapper">
-                <div class="card__titlee">High</div>
-                <div class="card__subtitlee">крем для лица</div>
-              </div>
-              <div class="card__price-wrapper">
-                <div class="card__price">2990</div>
-                <div class="card__volume">50ml</div>
-              </div>
-            </div>
-
-            <button class="card__btn">В корзину</button>
-          </div>
-        </div>
-        <!-- Конец карточки -->
-        <div class="card" id="10">
-          <div class="card__top">
-            <a class="card__img" href="#"
-              ><img src="/public/images/Rectangle52.png" alt="cream"
-            /></a>
-          </div>
-          <div class="card__bottom">
-            <div class="card__inform">
-              <div class="card__title-wrapper">
-                <div class="card__titlee">High</div>
-                <div class="card__subtitlee">крем для лица</div>
-              </div>
-              <div class="card__price-wrapper">
-                <div class="card__price">3990</div>
-                <div class="card__volume">50ml</div>
-              </div>
-            </div>
-
-            <button class="card__btn">В корзину</button>
-          </div>
-        </div>
-        <!-- Конец карточки -->
-
-        <div class="card" id="11">
-          <div class="card__top">
-            <a class="card__img" href="#"
-              ><img src="/public/images/Rectangle53.png" alt="cream"
-            /></a>
-          </div>
-          <div class="card__bottom">
-            <div class="card__inform">
-              <div class="card__title-wrapper">
-                <div class="card__titlee">High</div>
-                <div class="card__subtitlee">крем для лица</div>
-              </div>
-              <div class="card__price-wrapper">
-                <div class="card__price">590</div>
-                <div class="card__volume">50ml</div>
-              </div>
-            </div>
-
-            <button class="card__btn">В корзину</button>
-          </div>
-        </div>
-        <!-- Конец карточки -->
-        <div class="card" id="12">
-          <div class="card__top">
-            <a class="card__img" href="#"
-              ><img src="/public/images/rec54.png" alt="cream"
-            /></a>
-          </div>
-          <div class="card__bottom">
-            <div class="card__inform">
-              <div class="card__title-wrapper">
-                <div class="card__titlee">High</div>
-                <div class="card__subtitlee">крем для лица</div>
-              </div>
-              <div class="card__price-wrapper">
-                <div class="card__price">490</div>
-                <div class="card__volume">50ml</div>
-              </div>
-            </div>
-            <button class="card__btn">В корзину</button>
-          </div>
-        </div>
-
-        <!-- Конец карточки -->
+        Конец карточки -->
       </div>
-      <div class="arrows-container">
-        <img
+      <div class="show-container">
+        <!-- <img
           class="arrow"
           id="catalog_prev"
           src="/public/images/left.svg"
           alt="стрелка налево"
-        />
-        <img
+        /> -->
+        <!-- <img
           class="arrow"
           id="catalog_next"
           src="/public/images/right.svg"
           alt="стрелка направо"
-        />
+        /> -->
+        <button class="show-cards none">Показать ещё</button>
       </div>
     </section>
     <!-- Каталог конец -->
@@ -440,6 +193,7 @@
     <!-- Footer конец -->
 
     <script src="https://api-maps.yandex.ru/2.1/?apikey=53af7210-735a-4eb7-9c7b-d1e8805991bc&lang=ru_RU"></script>
-    <script src="/src/js/catalog.js"></script>
+    <script src="/src/js/map.js"></script>
+    <script src="/src/js/catalog.js" type="module"></script>
   </body>
 </html>
