--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     </div>
     <!-- Конец модального окна -->
 
-    <header class="header">
+    <header class="index-header">
       <div class="nav__container">
         <button class="header__burger-btn" id="burger-btn">
           <span></span><span></span><span></span>
